# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_file1.py  test_file2.py
.github/workflows/: linting.yaml  unit-tests.yaml  unit-tests.yml
copyrighter/: copyrighter.py  test_copyrighter.py
megh_pch/copyrighter/: README.md
pip-compile-wrapper/: pip-compile-wrapper.py
tests/: README.md
tests/copyrighter/: test_copyrighter.py
