# https://flit.pypa.io/en/latest/pyproject_toml.html

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "megh_pch"
description = "Megh's custom pre-commit hooks"
version = "2022.2"
authors = [
    { name = "Alexander K. Freed", email = "alex.freed@meghcomputing.com" },
]
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock"
]
dev = [
    "pytest",
    "pytest-mock",
    "pre-commit",
]

[project.scripts]
"copyrighter" = "megh_pch.copyrighter.copyrighter:main"
